--- a/app/src/main/res/layout/activity_choose_sequence.xml
+++ b/app/src/main/res/layout/activity_choose_sequence.xml
@@ -7,19 +7,25 @@
     tools:context="de.uni_stuttgart.projektinf.tmt.activities.ChooseSequenceActivity">
 
     <LinearLayout
-        android:layout_width="368dp"
-        android:layout_height="495dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp">
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5"
+            android:layout_weight="0.1"
             android:text="Please choose the sequence:"
-            android:textSize="24sp" />
+            android:textSize="32sp" />
 
         <Button
             android:id="@+id/button4"
@@ -27,7 +33,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="1-2-3-..." />
+            android:text="1-2-3-..."
+            android:textSize="32sp" />
 
         <Button
             android:id="@+id/button3"
@@ -35,7 +42,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="A-B-C-..." />
+            android:text="A-B-C-..."
+            android:textSize="32sp" />
 
         <Button
             android:id="@+id/button5"
@@ -43,6 +51,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="1-A-2-B-..." />
+            android:text="1-A-2-B-..."
+            android:textSize="32sp" />
+
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
